# zip-api

./: do_deploy.sh  docker-compose.yml  dockerfile  index.html  main.py  pyproject.toml  readme.md  requirements.txt
